added an example for ui:Choise in structures4 and fixed bugs in forms for ui:choice

--- a/Documentation/style/demo-style.css
+++ b/Documentation/style/demo-style.css
@@ -28,6 +28,10 @@
             border: 0.1em solid gray;
         }
 
+        td {
+            vertical-align: top;
+        }
+
         td.input {
             border-top: 0.1em solid gray;
             border-right: 0.1em dotted gray;
